# frilobot

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  PRD.md  pyproject.toml  requirements.txt
bot/: __main__.py  config.py
bot/callbacks/: pagination.py
bot/filters/: admin.py
bot/handlers/: __init__.py  compose.py  menu.py  profile.py  radar.py  settings.py  start.py
bot/keyboards/: compose.py  menu.py  onboarding.py  profile.py  radar.py  settings.py
bot/middlewares/: auth.py  throttling.py
bot/states/: compose.py  onboarding.py  profile.py  radar.py  settings.py
db/: connection.py
db/repositories/: broadcasts.py  channels.py  messages.py  search_profiles.py  settings.py  users.py  vacancies.py
llm/: client.py
llm/prompts/: broadcast_message.py  rewrite.py  vacancy_classify.py  vacancy_response.py
migrations/: 001_users.sql  002_channels.sql  003_broadcasts.sql  004_vacancies.sql
parsers/: tgstat.py
services/: composer.py  radar.py
