[project]
name = "frilobot"
version = "0.1.0"
description = "Telegram-бот для фрилансеров: поиск каналов, генерация сообщений, мониторинг вакансий, рассылка"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["bot", "services", "db", "llm", "parsers", "scheduler", "userbot", "utils"]
